# simple-web-scrapper

./: .flake8  .pre-commit-config.yaml  pyproject.toml
src/simple_web_scrapper/: __main__.py
src/simple_web_scrapper/base_scrapper/: scrapy.cfg
src/simple_web_scrapper/base_scrapper/base_scrapper/: items.py  middlewares.py  pipelines.py  selenium_middleware_fixed.py  settings.py
src/simple_web_scrapper/base_scrapper/base_scrapper/spiders/: base.py  base_configurable_spider.py  base_playwright_configurable_spider.py  configurable_car_spider.py  configurable_properties_spider.py  field_utilities.py  playwright_configurable_car_spider.py  playwright_configurable_properties_spider.py
src/simple_web_scrapper/base_scrapper/base_scrapper/spiders/configs/: cars-button-sites.json  cars-sites.json  properties-button-sites.json  properties-sites.json  sites.json
