[project]
name = "simple-web-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Laith Zeyadeh",email = "laithz@devnas.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "scrapy (>=2.13.3,<3.0.0)",
    "scrapy-selenium (>=0.0.7,<0.0.8)",
    "selenium (==4.9.1)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "simple_web_scrapper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 8

[tool.mypy]
files = ["best_practices", "test"]
ignore_missing_imports = true
[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
