[tool.poetry]
name = "simple-web-scrapper"
version = "0.1.0"
description = ""
authors = ["Laith Zeyadeh <laithz@devnas.net>"]
readme = "README.md"

packages = [
  { include = "simple_web_scrapper", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-dotenv = ">=1.1.1,<2.0.0"
scrapy = ">=2.13.3,<3.0.0"
scrapy-selenium = ">=0.0.7,<0.0.8"
selenium = "4.9.1"
webdriver-manager = ">=4.0.2,<5.0.0"
pandas = ">=2.3.3,<3.0.0"
scrapy-playwright = "^0.0.44"

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
flake8 = ">=7.3.0,<8.0.0"
mypy = ">=1.18.2,<2.0.0"
pre-commit = ">=4.3.0,<5.0.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
